fdo#48017 fix WIN32 long path name support of spelling dictionaries

Change-Id: I1ccaae9dba4f82cd50531890e159519a765a0fff